--- a/app/templates/orgs.html
+++ b/app/templates/orgs.html
@@ -22,7 +22,7 @@
 
 				{% for org in orgs %}
 
-					<h2 class="[ pt-3 ]"><a href="{{ url_for('org', organization_id=org.id) }}">{{ org.name }}</a></h2>
+					<h2 class="[ pt-3 ]"><a href="{{ url_for('org', org_id=org.id) }}">{{ org.name }}</a></h2>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Website: {{ org.website }}</li>
 						<li>Phone: {{ org.phone }}</li>
