--- a/app/templates/org_delete.html
+++ b/app/templates/org_delete.html
@@ -25,7 +25,7 @@
 		<section id="section--submit">
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 text-right p-4 ]">
-					<a id="js-cancel_org" class="js-cancel-form butt butt--edit [ btn btn-sm ]" href="{{ url_for('org', organization_id=org.id) }}" role="button">Cancel</a>
+					<a id="js-cancel_org" class="js-cancel-form butt butt--edit [ btn btn-sm ]" href="{{ url_for('org', org_id=org.id) }}" role="button">Cancel</a>
 					<input id="js-delete_org" type="submit" class="butt butt--delete js-delete-form [ ml-2 btn btn-sm ]" value="Delete">
 				</div>
 			</div>
