--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -333,37 +333,33 @@
 					</div>
 
 					<div class="[ row ]">
-						<div class="[ col-md-8 py-4 ]">
+						<div class="[ col py-4 ]">
 							<h3 class="section__head [ display-4 ]">Organizations</h3>
-						</div>
-					</div>
 
-					<div class="[ row justify-content-center ]">
-						<div class="[ col-12 py-4 ]">
-							<div class="[ row ]">
-
-								<div class="[ col-md-3 ]">
-									<p>Exhibition Organizations</p>
-								</div>
-
-								<div class="[ col-md-9 ]">
+							<div class="[ row justify-content-center ]">
+								<div class="[ col-12 text-right pb-4 ]">
 									<button id="js-create_org" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_org">Create</button>
 									<button id="js-add_org" class="js-add-li butt butt--add" type="button">Add</button>
-									<ul class="ul_org [ pl-0 ]">
-
-										<li class="js-li_org [ row mb-3 align-items-baseline ]">
-											<div class="[ col-10 col-md-8 ]">
-												<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
-												{{ datalist("orgs", orgs) }}
-											</div>
-											<div class="[ col-2 col-md-3 ]">
-												<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
-											</div>
-										</li>
-
-									</ul>
 								</div>
 							</div>
+
+							<ul class="ul_org [ pl-0 ]">
+
+								<li class="js-li_org [ row mb-3 align-items-baseline ]">
+									<div class="[ col-md-3 ]">
+										<label for="orgs">Organizations</label>
+									</div>
+									<div class="[ col-10 col-md-7 ]">
+										<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
+										{{ datalist("orgs", orgs) }}
+									</div>
+									<div class="[ col-2 ]">
+										<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
+									</div>
+								</li>
+
+							</ul>
+
 						</div>
 					</div>
 
@@ -451,40 +447,36 @@
 						</div>
 
 						<div class="[ row ]">
-							<div class="[ col-md-8 py-4 ]">
+							<div class="[ col py-4 ]">
 								<h3 class="section__head [ display-4 ]">Artists</h3>
+
+								<div class="[ row justify-content-center ]">
+									<div class="[ col-12 text-right pb-4 ]">
+										<button id="js-create_artist" class="js-create-modal butt butt--create [ m-1 mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artist">Create</button>
+										<button id="js-add_artist" class="js-add-li butt butt--add  [ m-1 mb-3 ]" type="button">Add</button>
+									</div>
+								</div>
+
+								<ul class="artwork__ul [ pl-0 ]">
+
+									<li class="js-li_artist [ row mb-3 align-items-baseline ]">
+										<div class="[ col-md-3 ]">
+											<label for="artists">Artist</label>
+										</div>
+										<div class="[ col-10 col-md-7 ]">
+											<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
+											<!-- Call datalist macro function -->
+											{{ datalist("artists", artists) }}
+										</div>
+										<div class="[ col-2 ]">
+											<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
+										</div>
+									</li>
+
+								</ul>
+
 							</div>
 						</div>
-
-						<div class="[ row justify-content-center ]">
-							<div class="[ col-12 py-4 ]">
-
-								<div class="[ col p-0 ]">
-									<button id="js-create_artist" class="js-create-modal butt butt--create [ m-1 mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artist">Create</button>
-									<button id="js-add_artist" class="js-add-li butt butt--add  [ m-1 mb-3 ]" type="button">Add</button>
-
-									<ul class="artwork__ul [ pl-0 ]">
-
-											<li class="js-li_artist [ row mb-3 align-items-baseline ]">
-												<div class="[ col-md-3 ]">
-													<label for="artists">Artist</label>
-												</div>
-												<div class="[ col-md-7 ]">
-													<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
-													<!-- Call datalist macro function -->
-													{{ datalist("artists", artists) }}
-												</div>
-												<div class="[ col-md-2 ]">
-													<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
-												</div>
-											</li>
-
-									</ul>
-
-								</div>
-
-								</div>
-							</div>
 
 					</form>
 				</div>
@@ -558,39 +550,35 @@
 							</div>
 						</div>
 
+
 						<div class="[ row ]">
-							<div class="[ col-sm-12 col-md-8 py-4 ]">
+							<div class="[ col py-4 ]">
 								<h3 class="section__head [ display-4 ]">Artworks</h3>
-							</div>
-						</div>
 
-						<div class="[ row justify-content-center ]">
-							<div class="[ col-12 py-4 ]">
-
-								<div class="[ col p-0 ]">
-
-									<button id="js-create_artwork" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
-									<button id="js-add_artwork" class="js-add-li butt butt--add" type="button">Add</button>
-
-									<ul class="object__ul object__ul--artworks [ pl-0 ]">
-
-											<li class="js-li_artwork [ row mb-3 align-items-baseline ]">
-												<div class="[ col-md-3 ]">
-													<label for="artworks">Artwork</label>
-												</div>
-												<div class="[ col-md-6 ]">
-													<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
-													<!-- Call datalist macro function -->
-													{{ datalist("artworks", artworks) }}
-												</div>
-												<div class="[ col-md-2 ]">
-													<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
-												</div>
-											</li>
-
-									</ul>
-
+								<div class="[ row justify-content-center ]">
+									<div class="[ col-12 text-right pb-4 ]">
+										<button id="js-create_artwork" class="js-create-modal butt butt--create [ mb-3 ]" type="button" data-toggle="modal" data-target="#js-modal_artwork">Create</button>
+										<button id="js-add_artwork" class="js-add-li butt butt--add" type="button">Add</button>
+									</div>
 								</div>
+
+								<ul class="object__ul object__ul--artworks [ pl-0 ]">
+
+									<li class="js-li_artwork [ row mb-3 align-items-baseline ]">
+										<div class="[ col-md-3 ]">
+											<label for="artworks">Artwork</label>
+										</div>
+										<div class="[ col-10 col-md-7 ]">
+											<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
+											<!-- Call datalist macro function -->
+											{{ datalist("artworks", artworks) }}
+										</div>
+										<div class="[ col-2 ]">
+											<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
+										</div>
+									</li>
+
+								</ul>
 
 							</div>
 						</div>
@@ -777,12 +765,12 @@
 		<div class="[ col-md-3 ]">
 			<label for="artworks">Artwork</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[col-10 col-md-7 ]">
 			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 			{{ datalist("artworks", artworks) }}
 		</div>
-		<div class="[ col-md-2 ]">
-			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+		<div class="[ col-2 ]">
+			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
 </script>
@@ -793,12 +781,12 @@
 		<div class="[ col-md-3 ]">
 			<label for="artists">Artist</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-7 ]">
 			<input id="js-datalist_artist" type="text" name="artists" list="artists" data-value="" value="" placeholder="Artist Name" class="js-datalist-child js-datalist_artist [ form-control ]">
 			{{ datalist("artists", artists) }}
 		</div>
-		<div class="[ col-md-2 ]">
-			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+		<div class="[ col-2 ]">
+			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
 </script>
@@ -809,12 +797,12 @@
 		<div class="[ col-md-3 ]">
 			<label for="parks">park</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-7 ]">
 			<input id="js-datalist_park" type="text" name="parks" list="parks" data-value="" value="" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control ]">
 			{{ datalist("parks", parks) }}
 		</div>
-		<div class="[ col-md-2 ]">
-			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+		<div class="[ col-2 ]">
+			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
 </script>
@@ -822,12 +810,15 @@
 <!-- Empty org template -->
 <script id="js-template_org" type="text/template">
 	<li class="js-li_org [ row mb-3 align-items-baseline ]">
-		<div class="[ col-10 col-md-8 ]">
+		<div class="[ col-md-3 ]">
+			<label for="orgs">Organizations</label>
+		</div>
+		<div class="[ col-10 col-md-7 ]">
 			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
 			{{ datalist("orgs", orgs) }}
 		</div>
-		<div class="[ col-2 col-md-3 ]">
-			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
+		<div class="[ col-2 ]">
+			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
 </script>
@@ -866,7 +857,7 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="[ modal-body ]">
+			<div class="[ modal-body px-4 ]">
 
 			</div>
 			<div class="[ modal-footer ]">
@@ -887,7 +878,7 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="[ modal-body ]">
+			<div class="[ modal-body px-4 ]">
 
 			</div>
 			<div class="[ modal-footer ]">
@@ -908,7 +899,7 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="[ modal-body ]">
+			<div class="[ modal-body px-4 ]">
 
 			</div>
 			<div class="[ modal-footer ]">
@@ -929,7 +920,7 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<div class="[ modal-body ]">
+			<div class="[ modal-body px-4 ]">
 
 			</div>
 			<div class="[ modal-footer ]">
