--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
+{% endblock %}
 {% block title %}NYC Parks Database{% endblock %}
 {% block content %}
 
@@ -101,4 +104,5 @@
 	</section>
 
 </div>
+
 {% endblock %}
