--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
+{% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
+{% endblock %}
+
 {% block title %}NYC Parks Database – Parks{% endblock %}
 {% block content %}
 
