--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
+{% endblock %}
 {% block title %}NYC Parks Database – Exhibitions{% endblock %}
 {% block content %}
 
