--- a/app/templates/exhibition_delete.html
+++ b/app/templates/exhibition_delete.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
 {% endblock %}
 {% block title %}Parks Database – Delete {{ exhibition.name|capitalize }}{% endblock %}
 {% block content %}
