--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -41,7 +41,7 @@
 					{{ form_exhibition.csrf_token }}
 
 					<div class="[ row ]">
-						<div class="[ col-md-6 pt-5 pb-4 ]">
+						<div class="[ col pt-5 pb-4 ]">
 							<h3 class="section__head [ display-4 ]">Exhibition Bio</h3>
 						</div>
 					</div>
@@ -102,7 +102,7 @@
 					</div>
 
 					<div class="[ row ]">
-						<div class="[ col-md-6 py-4 ]">
+						<div class="[ col py-4 ]">
 							<h3 class="section__head [ display-4 ]">Install Details</h3>
 						</div>
 					</div>
@@ -280,7 +280,7 @@
 					</div>
 
 					<div class="[ row ]">
-						<div class="[ col-md-8 py-4 ]">
+						<div class="[ col py-4 ]">
 							<h3 class="section__head [ display-4 ]">De-Install Details</h3>
 						</div>
 					</div>
@@ -421,7 +421,7 @@
 						{{ form_artwork.csrf_token }}
 
 						<div class="[ row ]">
-							<div class="[ col-md-8 pt-5 pb-4 ]">
+							<div class="[ col pt-5 pb-4 ]">
 								<h3 class="section__head [ display-4 ]">Artwork Bio</h3>
 							</div>
 						</div>
